--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	          		<div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-		          	<div class="text">
+		          	<div class="text" style="padding-top: 10px;">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Sheikh Muhammed Tadeeb</span></h1>
 			            <h2 class="mb-4">A Computer Science & Engineering Student</h2>
@@ -228,7 +228,7 @@
 							<div class="progress">
 							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:40%">
-							    <span><div style="padding-top: 143%;">40%</div></span>
+							    <span><div style="padding-top: 140%;">40%</div></span>
 							  	</div>
 							</div>
 						</div>
