--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	          		<div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-		          	<div class="text">
+		          	<div class="text" style="padding-top: 30px;">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Sheikh Muhammed Tadeeb</span></h1>
 			            <h2 class="mb-4">A Computer Science & Engineering Student</h2>
