--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	
@@ -620,7 +621,10 @@
 						<div class="col-md-4 text-center d-flex ftco-animate" class="services-1">
 							<a href="#" class="services-1"> 
 								<span class="icon">
-									<i class="flaticon-analysis"></i>
+									<!-- <i class="flaticon-analysis"></i> -->
+									<span class="material-symbols-outlined">
+										fitness_center
+									</span>
 								</span>
 								<div class="desc">
 									<h3 class="mb-5">Volunteery Activities</h3>
