--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
 							<a href="#" class="services-1"> 
 								<span class="icon">
 									<!-- <i class="flaticon-analysis"></i> -->
-									<span class="material-symbols-outlined">
+									<span class="material-symbols-outlined" style="font-size: 30px;">
 										fitness_center
 									</span>
 								</span>
