--- a/index.html
+++ b/index.html
@@ -544,7 +544,9 @@
 								<span class="icon">
 									<!-- <i class="flaticon-hindi"></i> -->
 									<!-- <img src="./images/hindi.png" /> -->
-									<i class="flaticon-flasks"></i>
+									<span class="material-symbols-outlined" style="font-size: 50px;">
+										translate
+									</span>
 								</span>
 								<div class="desc">
 									<h3 class="mb-5">Languages</h3>
@@ -561,7 +563,9 @@
 						<div class="col-md-4 text-center d-flex ftco-animate">
 							<a href="https://drive.google.com/file/d/1anzd-jtmlGv6Z3eAlJrBfUqISJIWoSaR/view?usp=share_link" target="_blank" class="services-1">
 								<span class="icon">
-									<i class="flaticon-flasks"></i>
+									<span class="material-symbols-outlined" style="font-size: 50px;">
+										fitness_center
+									</span>
 								</span>
 								<div class="desc">
 									<h3 class="mb-5">Gym</h3>
@@ -574,7 +578,9 @@
 						<div class="col-md-4 text-center d-flex ftco-animate">
 							<a href="https://drive.google.com/file/d/1cAZBSmZDbJzrNEi0JhA14wn1re5P9gFi/view?usp=sharing" target="_blank" class="services-1">
 								<span class="icon">
-									<i class="flaticon-ideas"></i>
+									<span class="material-symbols-outlined" style="font-size: 50px;">
+										groups
+										</span>
 								</span>
 								<div class="desc">
 									<h3 class="mb-5">Team-lead at Placement Committee (Avantika University )</h3>
@@ -590,7 +596,9 @@
 						<div class="col-md-4 text-center d-flex ftco-animate">
 							<a href="#" class="services-1">
 								<span class="icon">
-									<i class="flaticon-analysis"></i>
+									<span class="material-symbols-outlined" style="font-size: 50px;">
+										microwave
+										</span>
 								</span>
 								<div class="desc">
 									<h3 class="mb-5">Cooking</h3>
