Done spelling changes

--- a/index.html
+++ b/index.html
@@ -635,9 +635,9 @@
 									</span>
 								</span>
 								<div class="desc">
-									<h3 class="mb-5">Volunteery Activities</h3>
+									<h3 class="mb-5">Voluntary Activities</h3>
 									<p style="color: #999999">
-										I am strong beleiver of "Giving back to the society". So I try to grab volunteery works for
+										I am strong beleiver of "Giving back to the society". So I try to grab voluntary works for
 										NGO's, public welfare clubs or community run programs that help under-priviledge section of the society. 
 									</p>
 								</div>
