--- a/index.html
+++ b/index.html
@@ -613,7 +613,9 @@
 						<div class="col-md-4 text-center d-flex ftco-animate">
 							<a href="https://drive.google.com/file/d/1dSk0HX7KvltAG81jwYBE-JlmNj9oQPSj/view?usp=share_link" target="_blank" class="services-1">
 								<span class="icon">
-									<i class="flaticon-analysis"></i>
+									<span class="material-symbols-outlined">
+										computer
+										</span>
 								</span>
 								<div class="desc">
 									<h3 class="mb-5">Member at Google Developer Student Clubs</h3>
@@ -630,9 +632,9 @@
 							<a href="#" class="services-1"> 
 								<span class="icon">
 									<!-- <i class="flaticon-analysis"></i> -->
-									<span class="material-symbols-outlined" style="font-size: 50px;">
-										fitness_center
-									</span>
+									<span class="material-symbols-outlined">
+										work
+										</span>
 								</span>
 								<div class="desc">
 									<h3 class="mb-5">Voluntary Activities</h3>
