--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
 						<div class="col-md-4 text-center d-flex ftco-animate">
 							<a href="https://drive.google.com/file/d/1dSk0HX7KvltAG81jwYBE-JlmNj9oQPSj/view?usp=share_link" target="_blank" class="services-1">
 								<span class="icon">
-									<span class="material-symbols-outlined">
+									<span class="material-symbols-outlined" style="font-size: 50px;">
 										computer
 										</span>
 								</span>
@@ -632,7 +632,7 @@
 							<a href="#" class="services-1"> 
 								<span class="icon">
 									<!-- <i class="flaticon-analysis"></i> -->
-									<span class="material-symbols-outlined">
+									<span class="material-symbols-outlined" style="font-size: 50px;">
 										work
 										</span>
 								</span>
