--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="col-md-6 animate-box">
                         <div class="progress-wrap ftco-animate">
                             <h3>AWS</h3>
@@ -460,6 +461,29 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-md-6 animate-box">
+                        <div class="progress-wrap ftco-animate">
+                            <h3>Terraform & Ansible</h3>
+                            <div class="progress">
+                                <div
+                                    class="progress-bar color-4"
+                                    role="progressbar"
+                                    aria-valuenow="90"
+                                    aria-valuemin="0"
+                                    aria-valuemax="100"
+                                    style="width:20%"
+                                >
+                                    <span
+                                        ><div style="padding-left: 80%;">
+                                            20%
+                                        </div></span
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
