--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                                     style="width:20%"
                                 >
                                     <span
-                                        ><div style="padding-left: 180%;">
+                                        ><div style="margin-left: 180%;">
                                             20%
                                         </div></span
                                     >
