--- a/index.html
+++ b/index.html
@@ -370,11 +370,8 @@
                                     aria-valuemax="100"
                                     style="width:20%"
                                 >
-                                    <span
-                                        ><div style="padding-left: 80%;">
-                                            20%
-                                        </div></span
-                                    >
+                                    <span>20%</span>
+                                    
                                 </div>
                             </div>
                         </div>
@@ -392,11 +389,8 @@
                                     aria-valuemax="100"
                                     style="width:20%"
                                 >
-                                    <span
-                                        ><div style="margin-left: 180%;">
-                                            20%
-                                        </div></span
-                                    >
+                                    <span>20% </span>
+
                                 </div>
                             </div>
                         </div>
