--- a/index.html
+++ b/index.html
@@ -40,97 +40,40 @@
                     <img src="./images/linkedin1.png" style="padding-left: 5%;"
                 /></a>
 
-                <div class="collapse navbar-collapse" id="ftco-nav">
-                    <ul class="navbar-nav nav ml-auto">
-                        <li class="nav-item">
-                            <a href="#home-section" class="nav-link"
-                                ><span>Home</span></a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a href="#about-section" class="nav-link"
-                                ><span>About</span></a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a href="#resume-section" class="nav-link"
-                                ><span>Resume</span></a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a href="#skills-section" class="nav-link"
-                                ><span>Skills</span></a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a href="#projects-section" class="nav-link"
-                                ><span>Projects</span></a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a href="#blog-section" class="nav-link"
-                                ><span>My Blog</span></a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a href="#cert-section" class="nav-link"
-                                ><span>Certifications</span></a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a href="#extra-section" class="nav-link"
-                                ><span>Extra-curricular</span></a
-                            >
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <section id="home-section" class="hero">
-            <div class="home-slider owl-carousel">
-                <div class="slider-item">
-                    <div class="overlay"></div>
-                    <div class="container">
-                        <div
-                            class="row d-md-flex no-gutters slider-text align-items-end justify-content-end"
-                            data-scrollax-parent="true"
-                        >
-                            <div
-                                class="one-third js-fullheight order-md-last img"
-                                style="background-image:url(images/bg_1.png);"
-                            >
-                                <div class="overlay"></div>
-                            </div>
-                            <div
-                                class="one-forth d-flex align-items-center ftco-animate"
-                                data-scrollax=" properties: { translateY: '70%' }"
-                            >
-                                <div class="text" style="padding-top: 30px;">
-                                    <span class="subheading">Hello!</span>
-                                    <h1 class="mb-4 mt-3">
-                                        I'm <span>Sheikh Muhammed Tadeeb</span>
-                                    </h1>
-                                    <h2 class="mb-4">
-                                        A Computer Science & Engineering Student
-                                    </h2>
-                                    <p>
-                                        <a
-                                            href="mailto:smtadeeb@gmail.com"
-                                            target="_blank"
-                                            class="btn btn-primary py-3 px-4"
-                                            >Hire me</a
-                                        >
-                                        <a
-                                            href="#projects-section"
-                                            class="btn btn-white btn-outline-white py-3 px-4"
-                                            >My works</a
-                                        >
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+	      <div class="collapse navbar-collapse" id="ftco-nav">
+	        <ul class="navbar-nav nav ml-auto">
+	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
+	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
+	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
+	          <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
+	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
+	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
+			  <li class="nav-item"><a href="#cert-section" class="nav-link"><span>Certifications</span></a></li>
+			  <li class="nav-item"><a href="#extra-section" class="nav-link"><span>Extra-curricular</span></a></li>
+	        </ul>
+	      </div>
+	    </div>
+	  </nav>
+	  <section id="home-section" class="hero">
+		  <div class="home-slider  owl-carousel" >
+	      <div class="slider-item ">
+	      	<div class="overlay"></div>
+	        <div class="container">
+	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
+	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_1.png);">
+	          		<div class="overlay"></div>
+	          	</div>
+		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+		          	<div class="text" style="padding-top: 30px;">
+		          		<span class="subheading">Hello!</span>
+			            <h1 class="mb-4 mt-3">I'm <span>Sheikh Muhammed Tadeeb</span></h1>
+			            <h2 class="mb-4">A Computer Science & Engineering Student</h2>
+			            <p><a href="mailto:smtadeeb@gmail.com" target="_blank" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+		            </div>
+		          </div>
+	        	</div>
+	        </div>
+	      </div>
 
                 <div class="slider-item">
                     <div class="overlay"></div>
@@ -377,20 +320,19 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 animate-box">
+					<div class="col-md-6 animate-box">
                         <div class="progress-wrap ftco-animate">
                             <h3>Terraform & Ansible</h3>
                             <div class="progress">
                                 <div
-                                    class="progress-bar color-4"
+                                    class="progress-bar color-6"
                                     role="progressbar"
-                                    aria-valuenow="90"
+                                    aria-valuenow="80"
                                     aria-valuemin="0"
                                     aria-valuemax="100"
-                                    style="width:20%"
+                                    style="width:70%"
                                 >
-                                    <span>20% </span>
-
+                                    <span>70%</span>
                                 </div>
                             </div>
                         </div>
