--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
 					<div class="col-md-6 animate-box">
                         <div class="progress-wrap ftco-animate">
-                            <h3>Terraform & Ansible</h3>
+                            <h3>Terraform & Ansible &nbsp; &nbsp; &nbsp; &nbsp; 70%</h3>
                             <div class="progress">
                                 <div
                                     class="progress-bar color-6"
@@ -332,7 +332,7 @@
                                     aria-valuemax="100"
                                     style="width:70%"
                                 >
-                                    <span>70%</span>
+                                    
                                 </div>
                             </div>
                         </div>
