--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                         <div class="progress-wrap ftco-animate">
                             <h3>
                                 Front-end Development (HTML, CSS, JavaScript,
-                                Bootstrap, Reactjs)
+                                Bootstrap, Reactjs) &nbsp; &nbsp; &nbsp; 40%
                             </h3>
                             <div class="progress">
                                 <div
@@ -388,11 +388,7 @@
                                     aria-valuemax="100"
                                     style="width:40%"
                                 >
-                                    <span
-                                        ><div style="padding-top: 136%;">
-                                            40%
-                                        </div></span
-                                    >
+                                   
                                 </div>
                             </div>
                         </div>
