--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                     </div>
                     <div class="col-md-6 animate-box">
                         <div class="progress-wrap ftco-animate">
-                            <h3>Jenkins</h3>
+                            <h3>Jenkins &nbsp; &nbsp; 20%</h3>
                             <div class="progress">
                                 <div
                                     class="progress-bar color-4"
@@ -313,7 +313,6 @@
                                     aria-valuemax="100"
                                     style="width:20%"
                                 >
-                                    <span>20%</span>
                                     
                                 </div>
                             </div>
@@ -322,7 +321,7 @@
 
 					<div class="col-md-6 animate-box">
                         <div class="progress-wrap ftco-animate">
-                            <h3>Terraform & Ansible &nbsp; &nbsp; &nbsp; &nbsp; 70%</h3>
+                            <h3>Terraform & Ansible &nbsp; &nbsp; &nbsp; &nbsp; 20%</h3>
                             <div class="progress">
                                 <div
                                     class="progress-bar color-6"
@@ -348,9 +347,9 @@
                                     aria-valuenow="70"
                                     aria-valuemin="0"
                                     aria-valuemax="100"
-                                    style="width:70%"
+                                    style="width:60%"
                                 >
-                                    <span>70%</span>
+                                    <span>60%</span>
                                 </div>
                             </div>
                         </div>
@@ -365,9 +364,9 @@
                                     aria-valuenow="80"
                                     aria-valuemin="0"
                                     aria-valuemax="100"
-                                    style="width:70%"
+                                    style="width:60%"
                                 >
-                                    <span>70%</span>
+                                    <span>60%</span>
                                 </div>
                             </div>
                         </div>
@@ -396,7 +395,7 @@
 
                     <div class="col-md-6 animate-box">
                         <div class="progress-wrap ftco-animate">
-                            <h3>Other tools (NEXUS, JIRA, GitLab)</h3>
+                            <h3>Other tools (NEXUS, JIRA, GitLab) &nbsp; &nbsp; &nbsp; 20% </h3>
                             <div class="progress">
                                 <div
                                     class="progress-bar color-6"
@@ -406,11 +405,7 @@
                                     aria-valuemax="100"
                                     style="width:20%"
                                 >
-                                    <span
-                                        ><div style="padding-top: 150%;">
-                                            20%
-                                        </div></span
-                                    >
+                                    
                                 </div>
                             </div>
                         </div>
