--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_1.png);">
+	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_3.png);">
 	          		<div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -96,14 +96,14 @@
                                     <span class="subheading">Hello!</span>
                                     <h1 class="mb-4 mt-3">
                                         I'm
-                                        <span>a DevOps/Cloud Enthusiast</span>
+                                        <span>a Software Engineer</span>
                                     </h1>
                                     <p>
                                         <a
                                             href="mailto:smtadeeb@gmail.com"
                                             target="_blank"
                                             class="btn btn-primary py-3 px-4"
-                                            >Hire me</a
+                                            >Connect with me</a
                                         >
                                         <a
                                             href="#projects-section"
