--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text" style="padding-top: 30px;">
 		          		<span class="subheading">Hello!</span>
-			            <h1 class="mb-4 mt-3">I'm <span>Sheikh Muhammed Tadeeb</span></h1>
-			            <h2 class="mb-4">A Computer Science & Engineering Student</h2>
-			            <p><a href="mailto:smtadeeb@gmail.com" target="_blank" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <h1 class="mb-4 mt-3">I'm <span>Muhammed Tadeeb</span></h1>
+			            <h2 class="mb-4">a Software Developer</h2>
+			            <p><a href="mailto:smtadeeb@gmail.com" target="_blank" class="btn btn-primary py-3 px-4">Connect with me</a> <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
 	        	</div>
