--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_3.png);">
+	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_3.jpg);">
 	          		<div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text" style="padding-top: 30px;">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Muhammed Tadeeb</span></h1>
-			            <h2 class="mb-4">a Software Developer</h2>
+			            <h2 class="mb-4">a Software Engineer</h2>
 			            <p><a href="mailto:smtadeeb@gmail.com" target="_blank" class="btn btn-primary py-3 px-4">Connect with me</a> <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
@@ -84,7 +84,7 @@
                         >
                             <div
                                 class="one-third js-fullheight order-md-last img"
-                                style="background-image:url(images/bg_3.png);"
+                                style="background-image:url(images/bg_1.jpg);"
                             >
                                 <div class="overlay"></div>
                             </div>
@@ -93,10 +93,10 @@
                                 data-scrollax=" properties: { translateY: '70%' }"
                             >
                                 <div class="text">
-                                    <span class="subheading">Hello!</span>
+                                    <span class="subheading">driven by a </span>
                                     <h1 class="mb-4 mt-3">
-                                        I'm
-                                        <span>a Software Engineer</span>
+                                        passion for 
+                                        <span>learning and creating impactful code</span>
                                     </h1>
                                     <p>
                                         <a
