some text changes over the website

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                                 data-scrollax=" properties: { translateY: '70%' }"
                             >
                                 <div class="text">
-                                    <span class="subheading">driven by a </span>
+                                    <span class="subheading">driven by passion for </span>
                                     <h1 class="mb-4 mt-3">
-                                        passion for 
-                                        <span>learning and creating impactful code</span>
+                                         learning and creating
+                                        <span>impactful code</span>
                                     </h1>
                                     <p>
                                         <a
