added new images

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         >
                             <div
                                 class="one-third js-fullheight order-md-last img"
-                                style="background-image:url(images/bg_11.jpeg);"
+                                style="background-image:url(images/bg_22.HEIC);"
                             >
                                 <div class="overlay"></div>
                             </div>
@@ -96,7 +96,7 @@
                                     <span class="subheading">driven by passion for </span>
                                     <h1 class="mb-4 mt-3">
                                          learning and creating
-                                        <span>impactful code</span>
+                                        <span>impactful codes</span>
                                     </h1>
                                     <p>
                                         <a
