some text changes over the website

--- a/index.html
+++ b/index.html
@@ -140,16 +140,7 @@
                                 <h1 class="big">About</h1>
                                 <h2 class="mb-4">About Me</h2>
                                 <p>
-                                    As a Junior DevOps Engineer and an AWS
-                                    Certified Solution Architect Associate, I
-                                    bring a unique combination of technical
-                                    skills, problem-solving abilities, and
-                                    leadership experience. My background in
-                                    computers and engineering, coupled with my
-                                    strong understanding of SDLC and Agile
-                                    Methodologies, allows me to deliver
-                                    high-performing solutions that bridge the
-                                    gap between development and operations.
+                                    I am a Computer Science and Engineering graduate with strong programming skills in C, C++ and Java, along with expertise in software development, cloud technologies, and cybersecurity. Currently pursuing my Master’s in Cyber Security and Cryptography at Yildiz Technical University, I combine academic knowledge with practical experience as a DTO Manager in one of Turkey’s largest real estate companies. I am AWS Solution Architect Associate certified and have hands-on experience with DevOps tools. Passionate about digital transformation, I focus on leveraging technology to optimize processes, enhance security, and deliver innovative solutions.
                                 </p>
                                 <ul class="about-info mt-4 px-md-0 px-2">
                                     <li class="d-flex">
@@ -162,19 +153,11 @@
                                     </li>
                                     <li class="d-flex">
                                         <span>Address:</span>
-                                        <span>Ujjain (M.P), India</span>
-                                    </li>
-                                    <li class="d-flex">
-                                        <span>Zip code:</span>
-                                        <span>456001</span>
+                                        <span>Istanbul, Turkiye</span>
                                     </li>
                                     <li class="d-flex">
                                         <span>Email:</span>
                                         <span>smtadeeb@gmail.com</span>
-                                    </li>
-                                    <li class="d-flex">
-                                        <span>Phone: </span>
-                                        <span>+91-6263933966</span>
                                     </li>
                                 </ul>
                             </div>
