some text changes over the website

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         >
                             <div
                                 class="one-third js-fullheight order-md-last img"
-                                style="background-image:url(images/bg_22.HEIC);"
+                                style="background-image:url(images/bg_11.jpeg);"
                             >
                                 <div class="overlay"></div>
                             </div>
@@ -193,13 +193,7 @@
                         <h1 class="big big-2">Resume</h1>
                         <h2 class="mb-4">Resume</h2>
                         <p>
-                            With experience working with AWS, Docker, Jenkins,
-                            Nexus, GIT, BASH, C++, MySQL, Linux, and databases,
-                            I am able to manage, deploy, and monitor cloud
-                            infrastructure and applications. I also have
-                            knowledge of Python, Tableau, HTML, CSS, Javascript,
-                            and Bootstrap, allowing me to work with a variety of
-                            technologies to deliver optimal solutions.
+                             I leverage a strong toolkit including AWS, Docker, Jenkins, and Linux to automate workflows and ensure robust deployments. My proficiency in full-stack development—from C, C++, Java and Python to JavaScript and modern frameworks—enables me to build efficient and comprehensive solutions across the entire technology stack.
                         </p>
                     </div>
                 </div>
