--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text" style="padding-top: 30px;">
 		          		<span class="subheading">Hello!</span>
-			            <h1 class="mb-4 mt-3">I'm <span>Muhammed Tadeeb</span></h1>
+			            <h1 class="mb-4 mt-3">I'm <span>Tadeeb</span></h1>
 			            <h2 class="mb-4">a Software Engineer</h2>
 			            <p><a href="mailto:smtadeeb@gmail.com" target="_blank" class="btn btn-primary py-3 px-4">Connect with me</a> <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
@@ -165,7 +165,7 @@
                         <div class="counter-wrap ftco-animate d-flex mt-md-3">
                             <div class="text">
                                 <p class="mb-4">
-                                    <span class="number" data-number="12"
+                                    <span class="number" data-number="14"
                                         >0</span
                                     >
                                     <span>Project complete</span>
@@ -592,114 +592,7 @@
             </div>
         </section>
 
-        <section class="ftco-section" id="blog-section">
-            <div class="container">
-                <div class="row justify-content-center mb-5 pb-5">
-                    <div
-                        class="col-md-10 heading-section text-center ftco-animate"
-                    >
-                        <h1 class="big big-2">Blogs</h1>
-                        <h2 class="mb-4">My Blogs</h2>
-                        <p>
-                            As an IT beginner, I have found a way to give back
-                            to the community through my informative blog posts,
-                            which are aimed at helping other beginners like
-                            myself. By creating content for fellow newcomers to
-                            the industry, I wish to make information more
-                            accessible and breaking down barriers to entry.
-                        </p>
-                    </div>
-                </div>
-                <div class="row d-flex">
-                    <div class="col-md-4 d-flex ftco-animate">
-                        <div class="blog-entry justify-content-end">
-                            <a
-                                href="single.html"
-                                class="block-20"
-                                style="background-image: url('images/image_1.jpg');"
-                            >
-                            </a>
-                            <div class="text mt-3 float-right d-block">
-                                <div
-                                    class="d-flex align-items-center mb-3 meta"
-                                >
-                                    <p class="mb-0">
-                                        <span class="mr-2"
-                                            >January 11, 2023</span
-                                        >
-                                        <a href="#" class="mr-2">Tadeeb</a>
-                                        <a href="#" class="meta-chat"
-                                            ><span class="icon-chat"></span>
-                                            0</a
-                                        >
-                                    </p>
-                                </div>
-                                <h3 class="heading">
-                                    <a href="single.html"></a>Why Linux is the
-                                    Smart Choice for Students Pursuing a Career
-                                    in IT
-                                </h3>
-                                <p>
-                                    The above blog is about why IT beginners or
-                                    university students should consider using
-                                    Linux-based operating systems from an early
-                                    stage in their education or career. The blog
-                                    highlights the key benefits of Linux,
-                                    including its open source nature,
-                                    cost-effectiveness, customization options,
-                                    security features, and efficiency.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 d-flex ftco-animate">
-                        <div class="blog-entry justify-content-end">
-                            <!--      <a href="single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
-              </a> -->
-                            <img
-                                src=""
-                                class="block-10"
-                                style="background-image: url('images/loading-bar.png');"
-                            />
-                            <div class="text mt-3 float-right d-block">
-                                <div
-                                    class="d-flex align-items-center mb-3 meta"
-                                >
-                                    <p class="mb-0">
-                                        <span class="mr-2"
-                                            >More coming soon</span
-                                        >
-                                        <!-- <a href="#" class="mr-2"></a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> </a> -->
-                                    </p>
-                                </div>
-                                <h3 class="heading">
-                                    <!-- <a href=""> </a> -->
-                                </h3>
-                                <p></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 d-flex ftco-animate">
-                        <!--<div class="blog-entry">
-              <a href="single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-              	<div class="d-flex align-items-center mb-3 meta">
-	                <p class="mb-0">
-	                	<span class="mr-2">June 21, 2019</span>
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-	                </p>
-                </div>
-                <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-              </div>
-            </div> -->
-                    </div>
-                </div>
-            </div>
-        </section>
+        
 
         <!-- Certs -->
         <section class="ftco-section ftco-no-pb" id="cert-section">
