added new images

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         >
                             <div
                                 class="one-third js-fullheight order-md-last img"
-                                style="background-image:url(images/bg_11.jpeg);"
+                                style="background-image:url(images/IMG_0604.jpg);"
                             >
                                 <div class="overlay"></div>
                             </div>
