--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <div class="col-md-6 text-center ftco-animate">
                         <p>
                             <a
-                                href="./images/SM_Tadeeb_Resume_09-05-2023.pdf"
+                                href="./images/smTadeeb_cv (1).pdf"
                                 class="btn btn-primary py-4 px-5"
                                 >Download Resume</a
                             >
