added updated CV

--- a/index.html
+++ b/index.html
@@ -768,14 +768,7 @@
                                 <h3 class="mb-5">Languages</h3>
                                 <p>English, Turkish, Hindi, Urdu</p>
                                 <p style="color: #999999">
-                                    As a multilingual enthusiast, I have
-                                    cultivated a deep appreciation for the
-                                    beauty and diversity of languages. With a
-                                    passion for communication and connection, I
-                                    recognize that the ability to speak in
-                                    someone's preferred language is a powerful
-                                    tool for building strong relationships and
-                                    understanding different cultures.
+                                    I can speak 4 languages fluently. Started with Arabic Language.
                                 </p>
                             </div>
                         </a>
@@ -797,13 +790,7 @@
                             <div class="desc">
                                 <h3 class="mb-5">Gym</h3>
                                 <p style="color: #999999">
-                                    For the past four years, I have dedicated
-                                    myself to regular gym workouts, committed to
-                                    pushing my body to its limits and achieving
-                                    new fitness goals. Through consistent
-                                    training and hard work, I am proud to have
-                                    even won a benchpress competition, a
-                                    testament to the progress I have made.
+                                    I am proud to have even won a benchpress competition.
                                 </p>
                             </div>
                         </a>
@@ -830,9 +817,7 @@
                                 <p style="color: #999999">
                                     The Placement Committee is a student-run
                                     establishment of Avantika University. The
-                                    team consists of meticulously selected
-                                    students, who coordinate on various
-                                    corporate engagement activities, mainly,
+                                    team corporate engagement activities, mainly,
                                     internships and placements.
                                 </p>
                             </div>
@@ -852,9 +837,7 @@
                             <div class="desc">
                                 <h3 class="mb-5">Cooking</h3>
                                 <p style="color: #999999">
-                                    I am passionate about food, I enjoy trying
-                                    new recipes and experimenting with different
-                                    flavors, and cooking for my friends and
+                                    I enjoy trying new recipes and love to cook for my friends and
                                     family. I learned this art from my Mom.
                                 </p>
                             </div>
@@ -882,10 +865,7 @@
                                 <p style="color: #999999">
                                     This is a Google-sponsored Student-Club at
                                     the University level where I served as one
-                                    of the developers. I was mainly involved in
-                                    familiarizing juniors with different
-                                    existing technology and conducting
-                                    tech-counseling sessions.
+                                    of the developers.
                                 </p>
                             </div>
                         </a>
@@ -926,13 +906,9 @@
                 <div class="row mb-5">
                     <div class="col-md">
                         <div class="ftco-footer-widget mb-4">
-                            <h2 class="ftco-heading-2">About</h2>
+                            <h2 class="ftco-heading-2">Profile</h2>
                             <p>
-                                I am a grounded & solution-oriented person with
-                                a wide variety of technological exposure looking
-                                to gain experience in Web development or
-                                DevOps/Cloud- based roles. I am adept at
-                                adjusting to work and situations.
+                               I am a Computer Science and Engineering graduate, currently pursuing a Master’s in Cyber Security and Cryptography. Skilled in C, C++, Java, Web Development, Cloud (AWS), and DevOps tools, I aim to build secure, scalable, and innovative solutions. 
                             </p>
                             <ul
                                 class="ftco-footer-social list-unstyled float-md-left float-lft mt-5"
