Changed the extra-curricular section

--- a/index.html
+++ b/index.html
@@ -739,160 +739,102 @@
         <section class="ftco-section" id="extra-section">
             <div class="container">
                 <div class="row justify-content-center py-5 mt-5">
-                    <div
-                        class="col-md-12 heading-section text-center ftco-animate"
-                    >
+                    <div class="col-md-12 heading-section text-center ftco-animate">
                         <h1 class="big big-2">Extra-curricular</h1>
                         <h2 class="mb-4">Extra-curricular Activities</h2>
-                        <p></p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-4 text-center d-flex ftco-animate">
-                        <a
-                            href="https://www.duolingo.com/profile/Sheikh_Tadeeb"
-                            target="_blank"
-                            class="services-1"
-                        >
-                            <span class="icon">
-                                <!-- <i class="flaticon-hindi"></i> -->
-                                <!-- <img src="./images/hindi.png" /> -->
-                                <span
-                                    class="material-symbols-outlined"
-                                    style="font-size: 50px;"
-                                >
+                        <a href="https://www.duolingo.com/profile/Sheikh_Tadeeb" target="_blank" class="services-1" style="min-height: 220px; padding: 20px 15px;">
+                            <span class="icon" style="margin-bottom: 10px;">
+                                <span class="material-symbols-outlined" style="font-size: 40px;">
                                     translate
                                 </span>
                             </span>
                             <div class="desc">
-                                <h3 class="mb-5">Languages</h3>
-                                <p>English, Turkish, Hindi, Urdu</p>
-                                <p style="color: #999999">
-                                    I can speak 4 languages fluently. Started with Arabic Language.
+                                <h3 class="mb-3" style="font-size: 18px;">Languages</h3>
+                                <p style="margin-bottom: 5px;">English, Turkish, Hindi, Urdu</p>
+                                <p style="color: #999999; font-size: 14px; line-height: 1.4;">
+                                    I can speak 4 languages fluently.
                                 </p>
                             </div>
                         </a>
                     </div>
                     <div class="col-md-4 text-center d-flex ftco-animate">
-                        <a
-                            href="https://drive.google.com/file/d/1Df3PFPBiOc6JcEbCERoUFo9t2OpJ-sVh/view?usp=share_link"
-                            target="_blank"
-                            class="services-1"
-                        >
-                            <span class="icon">
-                                <span
-                                    class="material-symbols-outlined"
-                                    style="font-size: 50px;"
-                                >
+                        <a href="https://drive.google.com/file/d/1Df3PFPBiOc6JcEbCERoUFo9t2OpJ-sVh/view?usp=share_link" target="_blank" class="services-1" style="min-height: 220px; padding: 20px 15px;">
+                            <span class="icon" style="margin-bottom: 10px;">
+                                <span class="material-symbols-outlined" style="font-size: 40px;">
                                     fitness_center
                                 </span>
                             </span>
                             <div class="desc">
-                                <h3 class="mb-5">Gym</h3>
-                                <p style="color: #999999">
+                                <h3 class="mb-3" style="font-size: 18px;">Gym</h3>
+                                <p style="color: #999999; font-size: 14px; line-height: 1.4;">
                                     I am proud to have even won a benchpress competition.
                                 </p>
                             </div>
                         </a>
                     </div>
                     <div class="col-md-4 text-center d-flex ftco-animate">
-                        <a
-                            href="https://drive.google.com/file/d/1cAZBSmZDbJzrNEi0JhA14wn1re5P9gFi/view?usp=sharing"
-                            target="_blank"
-                            class="services-1"
-                        >
-                            <span class="icon">
-                                <span
-                                    class="material-symbols-outlined"
-                                    style="font-size: 50px;"
-                                >
+                        <a href="https://drive.google.com/file/d/1cAZBSmZDbJzrNEi0JhA14wn1re5P9gFi/view?usp=sharing" target="_blank" class="services-1" style="min-height: 220px; padding: 20px 15px;">
+                            <span class="icon" style="margin-bottom: 10px;">
+                                <span class="material-symbols-outlined" style="font-size: 40px;">
                                     groups
                                 </span>
                             </span>
                             <div class="desc">
-                                <h3 class="mb-5">
-                                    Team-lead at Placement Committee (Avantika
-                                    University )
-                                </h3>
-                                <p style="color: #999999">
-                                    The Placement Committee is a student-run
-                                    establishment of Avantika University. The
-                                    team corporate engagement activities, mainly,
-                                    internships and placements.
+                                <h3 class="mb-3" style="font-size: 18px;">Team-lead at Placement Committee</h3>
+                                <p style="color: #999999; font-size: 14px; line-height: 1.4;">
+                                    Student-run establishment managing corporate engagement activities.
                                 </p>
                             </div>
                         </a>
                     </div>
 
                     <div class="col-md-4 text-center d-flex ftco-animate">
-                        <a href="#" class="services-1">
-                            <span class="icon">
-                                <span
-                                    class="material-symbols-outlined"
-                                    style="font-size: 50px;"
-                                >
+                        <a href="#" class="services-1" style="min-height: 220px; padding: 20px 15px;">
+                            <span class="icon" style="margin-bottom: 10px;">
+                                <span class="material-symbols-outlined" style="font-size: 40px;">
                                     microwave
                                 </span>
                             </span>
                             <div class="desc">
-                                <h3 class="mb-5">Cooking</h3>
-                                <p style="color: #999999">
-                                    I enjoy trying new recipes and love to cook for my friends and
-                                    family. I learned this art from my Mom.
+                                <h3 class="mb-3" style="font-size: 18px;">Cooking</h3>
+                                <p style="color: #999999; font-size: 14px; line-height: 1.4;">
+                                    I enjoy trying new recipes and love to cook for friends and family.
                                 </p>
                             </div>
                         </a>
                     </div>
 
                     <div class="col-md-4 text-center d-flex ftco-animate">
-                        <a
-                            href="https://drive.google.com/file/d/1dSk0HX7KvltAG81jwYBE-JlmNj9oQPSj/view?usp=share_link"
-                            target="_blank"
-                            class="services-1"
-                        >
-                            <span class="icon">
-                                <span
-                                    class="material-symbols-outlined"
-                                    style="font-size: 50px;"
-                                >
+                        <a href="https://drive.google.com/file/d/1dSk0HX7KvltAG81jwYBE-JlmNj9oQPSj/view?usp=share_link" target="_blank" class="services-1" style="min-height: 220px; padding: 20px 15px;">
+                            <span class="icon" style="margin-bottom: 10px;">
+                                <span class="material-symbols-outlined" style="font-size: 40px;">
                                     computer
                                 </span>
                             </span>
                             <div class="desc">
-                                <h3 class="mb-5">
-                                    Member at Google Developer Student Clubs
-                                </h3>
-                                <p style="color: #999999">
-                                    This is a Google-sponsored Student-Club at
-                                    the University level where I served as one
-                                    of the developers.
+                                <h3 class="mb-3" style="font-size: 18px;">Google Developer Student Clubs</h3>
+                                <p style="color: #999999; font-size: 14px; line-height: 1.4;">
+                                    Served as one of the developers at university level Google-sponsored club.
                                 </p>
                             </div>
                         </a>
                     </div>
 
-                    <div
-                        class="col-md-4 text-center d-flex ftco-animate"
-                        class="services-1"
-                    >
-                        <a href="#" class="services-1">
-                            <span class="icon">
-                                <!-- <i class="flaticon-analysis"></i> -->
-                                <span
-                                    class="material-symbols-outlined"
-                                    style="font-size: 50px;"
-                                >
+                    <div class="col-md-4 text-center d-flex ftco-animate">
+                        <a href="#" class="services-1" style="min-height: 220px; padding: 20px 15px;">
+                            <span class="icon" style="margin-bottom: 10px;">
+                                <span class="material-symbols-outlined" style="font-size: 40px;">
                                     work
                                 </span>
                             </span>
                             <div class="desc">
-                                <h3 class="mb-5">Voluntary Activities</h3>
-                                <p style="color: #999999">
-                                    I am strong beleiver of "Giving back to the
-                                    society". So I try to grab voluntary works
-                                    for NGO's, public welfare clubs or community
-                                    run programs that help under-priviledge
-                                    section of the society.
+                                <h3 class="mb-3" style="font-size: 18px;">Voluntary Activities</h3>
+                                <p style="color: #999999; font-size: 14px; line-height: 1.4;">
+                                    Participate in NGO's and community programs helping under-privileged sections.
                                 </p>
                             </div>
                         </a>
@@ -917,7 +859,7 @@
                                     <a
                                         href="https://github.com/smTadeeb"
                                         target="_blank"
-                                        ><span class="GitHub"></span
+                                        ><svg > </svg>
                                     ></a>
                                 </li>
                                 
@@ -935,7 +877,7 @@
                                         ></span
                                         >Home</a
                                     >
-                                </li>
+                                </li> 
                                 <li>
                                     <a href="#about-section"
                                         ><span
