--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@
                         <h1 class="big big-2">Skills</h1>
                         <h2 class="mb-4">My Skills</h2>
                         <p>
-                            I am quick learner and will forever remain a curious
-                            student.
+                            Here are the skills I am contiuosly working on
                         </p>
                     </div>
                 </div>
@@ -237,9 +236,9 @@
                                     aria-valuenow="90"
                                     aria-valuemin="0"
                                     aria-valuemax="100"
-                                    style="width:60%"
+                                    style="width:70%"
                                 >
-                                    <span>60%</span>
+                                    <span>70%</span>
                                 </div>
                             </div>
                         </div>
